fixed some spacing

--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -74,7 +74,7 @@ body {
 
    display: grid; 
    /* grid-template-columns: 1fr;  */
-   grid-template-rows: 4.9em 1fr 6em; 
+   grid-template-rows: 5.1em 1fr 6em; 
    gap: 3em 0px; 
    grid-template-areas: 
       "navbar"
@@ -90,7 +90,7 @@ body {
 
    display: grid; 
    /* grid-template-columns: 1fr;  */
-   grid-template-rows: 5em 29.9em 2em; 
+   grid-template-rows: 5em 30.1em 2em; 
    gap: 3em 0px; 
    grid-template-areas: 
       "navbar"
@@ -106,7 +106,7 @@ body {
 
    display: grid; 
    /* grid-template-columns: 1fr;  */
-   grid-template-rows: 5.5em 1fr 6em; 
+   grid-template-rows: 6em 1fr 6em; 
    gap: 3em 0px; 
    grid-template-areas: 
       "navbar"
